{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 160,
  "lineage": "ea32fdb5-b025-517a-4db4-f2acde5b7975",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "ec2-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:816058150320:listener/app/myproject-ec2-alb/7cc0497ea02df163/6eb9757d16a8a5fd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:816058150320:targetgroup/myproject-ec2-tg/aa9be6b606dbcc6a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:816058150320:listener/app/myproject-ec2-alb/7cc0497ea02df163/6eb9757d16a8a5fd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:816058150320:loadbalancer/app/myproject-ec2-alb/7cc0497ea02df163",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.default-target-group",
            "aws_lb.terraform-lab",
            "aws_security_group.load-balancer",
            "aws_subnet.public_subnets",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:816058150320:targetgroup/myproject-ec2-tg/aa9be6b606dbcc6a",
            "arn_suffix": "targetgroup/myproject-ec2-tg/aa9be6b606dbcc6a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:816058150320:targetgroup/myproject-ec2-tg/aa9be6b606dbcc6a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "myproject-ec2-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a693aea7e5e24da7"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0663c2a435c6a9c6e",
            "domain": "vpc",
            "id": "eipalloc-0663c2a435c6a9c6e",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-251-149-111.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.149.111",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0702b1aec03c6a3a4",
            "arn": "arn:aws:ec2:ap-southeast-1:816058150320:instance/i-05e258a9e8d1efcfa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session-manager",
            "id": "i-05e258a9e8d1efcfa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c7fa2bcb9033ee00",
            "private_dns": "ip-192-168-1-216.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.216",
            "public_dns": "ec2-52-77-218-225.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.77.218.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-048435099cfe1c435",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-00b46c59950972f57"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0690d5ae18043c7f5",
            "tags": {
              "Name": "Bastion"
            },
            "tags_all": {
              "Name": "Bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00b46c59950972f57"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.session-manager",
            "aws_iam_role.session-manager",
            "aws_key_pair.tf-key-pair",
            "aws_security_group.ec2",
            "aws_security_group.load-balancer",
            "aws_subnet.public_subnets",
            "aws_vpc.demovpc",
            "data.aws_iam_policy_document.ec2",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:816058150320:internet-gateway/igw-051e4972fcfb2cd82",
            "id": "igw-051e4972fcfb2cd82",
            "owner_id": "816058150320",
            "tags": {
              "Name": "Project VPC IG"
            },
            "tags_all": {
              "Name": "Project VPC IG"
            },
            "vpc_id": "vpc-0a693aea7e5e24da7"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform-lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:816058150320:loadbalancer/app/myproject-ec2-alb/7cc0497ea02df163",
            "arn_suffix": "app/myproject-ec2-alb/7cc0497ea02df163",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "myproject-ec2-alb-2016379717.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:816058150320:loadbalancer/app/myproject-ec2-alb/7cc0497ea02df163",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myproject-ec2-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e3c7360cee9805aa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01bb969c075500445"
              },
              {
                "subnet_id": "subnet-0690d5ae18043c7f5"
              }
            ],
            "subnets": [
              "subnet-01bb969c075500445",
              "subnet-0690d5ae18043c7f5"
            ],
            "vpc_id": "vpc-0a693aea7e5e24da7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.load-balancer",
            "aws_subnet.public_subnets",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-lab-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0663c2a435c6a9c6e",
            "association_id": "eipassoc-0e8fe9f067b9a1e8e",
            "connectivity_type": "public",
            "id": "nat-0deb8f27206818e7a",
            "network_interface_id": "eni-0ec52d68b37d37a03",
            "private_ip": "192.168.1.164",
            "public_ip": "13.251.149.111",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0690d5ae18043c7f5",
            "tags": {
              "Name": "terraform-lab-ngw"
            },
            "tags_all": {
              "Name": "terraform-lab-ngw"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.gw",
            "aws_subnet.public_subnets",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-ngw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02a83ac2646c916de1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0deb8f27206818e7a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02a83ac2646c916de",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.terraform-lab-ngw",
            "aws_route_table.private-route-table",
            "aws_subnet.public_subnets",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:816058150320:route-table/rtb-02a83ac2646c916de",
            "id": "rtb-02a83ac2646c916de",
            "owner_id": "816058150320",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-terraform-lab-route-table"
            },
            "tags_all": {
              "Name": "private-terraform-lab-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a693aea7e5e24da7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "second_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:816058150320:route-table/rtb-026a76a7ef6d19efb",
            "id": "rtb-026a76a7ef6d19efb",
            "owner_id": "816058150320",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-051e4972fcfb2cd82",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "2nd Route Table"
            },
            "tags_all": {
              "Name": "2nd Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a693aea7e5e24da7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5ca396a9839eb19",
            "route_table_id": "rtb-02a83ac2646c916de",
            "subnet_id": "subnet-06b4ef696d08736db"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private_subnets",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05296243960b3592c",
            "route_table_id": "rtb-02a83ac2646c916de",
            "subnet_id": "subnet-0d8726b200d137a59"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private_subnets",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074bdf77bf172f648",
            "route_table_id": "rtb-026a76a7ef6d19efb",
            "subnet_id": "subnet-0690d5ae18043c7f5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.second_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.demovpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0470711c63c99d9e2",
            "route_table_id": "rtb-026a76a7ef6d19efb",
            "subnet_id": "subnet-01bb969c075500445"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.second_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:816058150320:security-group/sg-00b46c59950972f57",
            "description": "Allows inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00b46c59950972f57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0e3c7360cee9805aa"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ec2_security_group",
            "name_prefix": "",
            "owner_id": "816058150320",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a693aea7e5e24da7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load-balancer",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:816058150320:security-group/sg-0e3c7360cee9805aa",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3c7360cee9805aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "load_balancer_security_group",
            "name_prefix": "",
            "owner_id": "816058150320",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a693aea7e5e24da7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:816058150320:subnet/subnet-06b4ef696d08736db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b4ef696d08736db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816058150320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0a693aea7e5e24da7"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:816058150320:subnet/subnet-0d8726b200d137a59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8726b200d137a59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816058150320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0a693aea7e5e24da7"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:816058150320:subnet/subnet-0690d5ae18043c7f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0690d5ae18043c7f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816058150320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0a693aea7e5e24da7"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:816058150320:subnet/subnet-01bb969c075500445",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bb969c075500445",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816058150320",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0a693aea7e5e24da7"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:816058150320:vpc/vpc-0a693aea7e5e24da7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-087aadaca0504fb8f",
            "default_route_table_id": "rtb-047ce24b330473570",
            "default_security_group_id": "sg-0ed353e7f65cf909c",
            "dhcp_options_id": "dopt-047c0adec9db5071d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a693aea7e5e24da7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-047ce24b330473570",
            "owner_id": "816058150320",
            "tags": {
              "Name": "Demovpc"
            },
            "tags_all": {
              "Name": "Demovpc"
            }
          }
        }
      ]
    }
  ]
}